[gd_scene load_steps=28 format=3 uid="uid://dfe5hxhkg8e2g"]

[ext_resource type="Script" uid="uid://dejtor41k5svl" path="res://scripts/melee_panda.gd" id="1_wy3jp"]
[ext_resource type="Texture2D" uid="uid://86l45cxyyj2x" path="res://assets/CharacterAssets/PandaCharacters/attack_default_panda_sprite.png" id="2_njl1r"]
[ext_resource type="Texture2D" uid="uid://dki5t88ycm2sv" path="res://assets/CharacterAssets/PandaCharacters/rolling_defualt_panda_sprite.png" id="2_wy3jp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d1h1o"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bax8x"]
radius = 100.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ri6vw"]
atlas = ExtResource("2_njl1r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq0qk"]
atlas = ExtResource("2_njl1r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaqtu"]
atlas = ExtResource("2_njl1r")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_llcw6"]
atlas = ExtResource("2_njl1r")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqm84"]
atlas = ExtResource("2_njl1r")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ei2a"]
atlas = ExtResource("2_njl1r")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeaev"]
atlas = ExtResource("2_njl1r")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp0my"]
atlas = ExtResource("2_njl1r")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pqoa"]
atlas = ExtResource("2_njl1r")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy3jp"]
atlas = ExtResource("2_wy3jp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk70t"]
atlas = ExtResource("2_wy3jp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynndt"]
atlas = ExtResource("2_wy3jp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_njl1r"]
atlas = ExtResource("2_wy3jp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cst8w"]
atlas = ExtResource("2_wy3jp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwn7i"]
atlas = ExtResource("2_wy3jp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tan5q"]
atlas = ExtResource("2_wy3jp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tkxl"]
atlas = ExtResource("2_wy3jp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24t53"]
atlas = ExtResource("2_wy3jp")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4tq4"]
atlas = ExtResource("2_wy3jp")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju2p8"]
atlas = ExtResource("2_wy3jp")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkxot"]
atlas = ExtResource("2_wy3jp")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pk70t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri6vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq0qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaqtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llcw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqm84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ei2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeaev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp0my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pqoa")
}],
"loop": false,
"name": &"attacking",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy3jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk70t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynndt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynndt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njl1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cst8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwn7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tan5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tkxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24t53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4tq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju2p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkxot")
}],
"loop": false,
"name": &"walking",
"speed": 8.0
}]

[node name="meleePanda" type="CharacterBody2D" groups=["meleePanda"]]
motion_mode = 1
script = ExtResource("1_wy3jp")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d1h1o")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_bax8x")

[node name="animatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_pk70t")
animation = &"walking"
autoplay = "idle"

[node name="attckcooldown" type="Timer" parent="."]
wait_time = 1.316
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="attckcooldown" to="." method="_on_attckcooldown_timeout"]
